Add VelocityCommand